Carga de Decisíón y Criterios

--- a/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
+++ b/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Alternatives.cs" />
+    <Compile Include="DecisionProblem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Standard.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
