--- a/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
@@ -51,25 +51,34 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Decisión.cs">
+    <Compile Include="Decision.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Decisión.Designer.cs">
-      <DependentUpon>Decisión.cs</DependentUpon>
+    <Compile Include="Decision.Designer.cs">
+      <DependentUpon>Decision.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pantalla.cs">
+    <Compile Include="Alternatives.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pantalla.Designer.cs">
-      <DependentUpon>Pantalla.cs</DependentUpon>
+    <Compile Include="Alternatives.Designer.cs">
+      <DependentUpon>Alternatives.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Window.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window.Designer.cs">
+      <DependentUpon>Window.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Decisión.resx">
-      <DependentUpon>Decisión.cs</DependentUpon>
+    <EmbeddedResource Include="Alternatives.resx">
+      <DependentUpon>Alternatives.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pantalla.resx">
-      <DependentUpon>Pantalla.cs</DependentUpon>
+    <EmbeddedResource Include="Decision.resx">
+      <DependentUpon>Decision.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Window.resx">
+      <DependentUpon>Window.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
