--- a/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
@@ -63,11 +63,11 @@
     <Compile Include="Alternatives.Designer.cs">
       <DependentUpon>Alternatives.cs</DependentUpon>
     </Compile>
-    <Compile Include="New_Standard.cs">
+    <Compile Include="AdminStandards.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="New_Standard.Designer.cs">
-      <DependentUpon>New_Standard.cs</DependentUpon>
+    <Compile Include="AdminStandards.Designer.cs">
+      <DependentUpon>AdminStandards.cs</DependentUpon>
     </Compile>
     <Compile Include="Window.cs">
       <SubType>Form</SubType>
@@ -83,8 +83,8 @@
     <EmbeddedResource Include="Decision.resx">
       <DependentUpon>Decision.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="New_Standard.resx">
-      <DependentUpon>New_Standard.cs</DependentUpon>
+    <EmbeddedResource Include="AdminStandards.resx">
+      <DependentUpon>AdminStandards.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Window.resx">
       <DependentUpon>Window.cs</DependentUpon>
@@ -97,6 +97,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -120,6 +121,9 @@
       <Project>{e0a817a0-18ee-411c-bd82-2407fa71584b}</Project>
       <Name>Dao</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Images\embossing-003fn_gallery_large.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
