--- a/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
+++ b/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
@@ -42,8 +42,10 @@
   <ItemGroup>
     <Compile Include="Alternatives.cs" />
     <Compile Include="DecisionProblem.cs" />
+    <Compile Include="Preferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Standard.cs" />
+    <Compile Include="StandardPreferencesEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
