--- a/WindowsFormsApp1/Dao/Dao.csproj
+++ b/WindowsFormsApp1/Dao/Dao.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionString.cs" />
+    <Compile Include="DecisionDAO.cs" />
+    <Compile Include="PreferenceDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
