--- a/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Pantalla.csproj
@@ -69,6 +69,12 @@
     <Compile Include="AdminStandards.Designer.cs">
       <DependentUpon>AdminStandards.cs</DependentUpon>
     </Compile>
+    <Compile Include="Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Options.Designer.cs">
+      <DependentUpon>Options.cs</DependentUpon>
+    </Compile>
     <Compile Include="StandardsPreference.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminStandards.resx">
       <DependentUpon>AdminStandards.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options.resx">
+      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StandardsPreference.resx">
       <DependentUpon>StandardsPreference.cs</DependentUpon>
@@ -145,6 +154,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\Images\dddddddd.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Images\Back.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Images\FinalBack.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
