--- a/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
+++ b/WindowsFormsApp1/ClassLibrary1/Entidades.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StandardWeight.cs" />
     <Compile Include="Alternatives.cs" />
     <Compile Include="DecisionProblem.cs" />
     <Compile Include="Preferences.cs" />
